--- a/app/src/main/res/layout/activity_detail_show.xml
+++ b/app/src/main/res/layout/activity_detail_show.xml
@@ -63,20 +63,8 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="160dp"
-                android:layout_height="190dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailTitle"
-                app:srcCompat="@mipmap/ic_launcher" />
-
-<!--            <Button-->
+            <!--            <Button-->
 <!--                android:id="@+id/btn_add_review"-->
 <!--                android:layout_width="wrap_content"-->
 <!--                android:layout_height="wrap_content"-->
@@ -98,71 +86,98 @@
 <!--                app:layout_constraintEnd_toEndOf="parent"-->
 <!--                map:layout_constraintTop_toBottomOf="@+id/detail_map" />-->
 
-            <Button
-                android:id="@+id/btn_reservation"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="160dp"
+                android:layout_height="190dp"
                 android:layout_marginTop="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailTitle"
+                app:srcCompat="@mipmap/ic_launcher"
+                map:layout_constraintHorizontal_bias="0.083" />
 
-                android:onClick="onClick"
-
-                android:text="예매하기"
-                map:layout_constraintEnd_toEndOf="parent"
-                map:layout_constraintStart_toStartOf="parent"
-                map:layout_constraintTop_toBottomOf="@+id/tv_detailAddr" />
 
             <TextView
-                android:id="@+id/tv_detailPlace"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_detailGenre"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="32dp"
-                android:text="공연 장소"
+                android:layout_marginTop="50dp"
+                android:text="장르"
                 android:fontFamily="@font/cafe24oneprettynight"
                 android:textStyle="bold"
                 android:textColor="#050202"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailTitle" />
 
             <TextView
-                android:id="@+id/tv_detailStart"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_detailPlace"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:text="시작일"
+                android:layout_marginTop="20dp"
+                android:text="장소"
                 android:fontFamily="@font/cafe24oneprettynight"
                 android:textStyle="bold"
-                android:textColor="#050101"
+                android:textColor="#050202"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailPlace" />
+                app:layout_constraintStart_toEndOf="@+id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailGenre" />
+
 
             <TextView
-                android:id="@+id/tv_detailEnd"
+                android:id="@+id/tv_detailDuration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
-                android:text="종료일"
+                android:text="공연기간"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#0B0707"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailPrice" />
+            <TextView
+                android:id="@+id/tv_detailStart"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:text="공연 시작일"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#0B0707"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailDuration" />
+            <TextView
+                android:id="@+id/tv_detailEnd"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="10dp"
+                android:text="공연 종료일"
                 android:fontFamily="@font/cafe24oneprettynight"
                 android:textStyle="bold"
                 android:textColor="#0B0707"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_detailStart" />
-
             <TextView
                 android:id="@+id/tv_detailPrice"
-                android:layout_width="0dp"
+                android:layout_width="380dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:text="티켓 가격"
@@ -170,98 +185,117 @@
                 android:textStyle="bold"
                 android:textColor="#090202"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailEnd" />
-
-            <TextView
-                android:id="@+id/tv_detailAddr"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="공연장 주소"
-                android:textColor="#070303"
-                android:fontFamily="@font/cafe24oneprettynight"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailURL" />
-
-            <TextView
-                android:id="@+id/tv_detailURL"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="공연장 URL"
-                android:textColor="#0C0404"
-                android:fontFamily="@font/cafe24oneprettynight"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailPhone" />
-
-            <TextView
-                android:id="@+id/tv_detailArea"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="35dp"
-                android:text="지역"
-                android:fontFamily="@font/cafe24oneprettynight"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/tv_detailPlace"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
             <TextView
-                android:id="@+id/tv_detailLink"
-                android:layout_width="0dp"
+                android:id="@+id/tv_crew"
+                android:layout_width="380dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:text="공연 제작진"
+                android:textColor="#070303"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_cast"
+                tools:layout_editor_absoluteY="615dp" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="예매처"
+                android:text="공연시간"
                 android:fontFamily="@font/cafe24oneprettynight"
                 android:textStyle="bold"
                 android:textColor="#040202"
                 android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailPrice" />
-
+                app:layout_constraintStart_toEndOf="@id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailPlace" />
             <TextView
-                android:id="@+id/tv_detailPhone"
-                android:layout_width="0dp"
+                android:id="@+id/tv_age"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="관람연령"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#040202"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@id/imageView2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_time" />
+            <TextView
+                android:id="@+id/tv_cast"
+                android:layout_width="380dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="문의 번호"
+                android:text="공연 출연진"
                 android:fontFamily="@font/cafe24oneprettynight"
                 android:textStyle="bold"
                 android:textColor="#050303"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_detailLink"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detailEnd"
+                map:layout_constraintEnd_toEndOf="parent" />
+            <TextView
+                android:id="@+id/tv_intro"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="소개"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#050303"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_crew"
                 map:layout_constraintEnd_toEndOf="parent" />
 
+            <ListView
+                android:id="@+id/recycler3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="200dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_intro" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/menu_reserve"
+        app:itemTextColor="@color/white"
+        app:itemBackground="@color/blue"
+        app:itemIconTint="@color/white"
+        map:layout_constraintEnd_toEndOf="parent"
+        map:layout_constraintStart_toStartOf="parent"
+        map:layout_constraintBottom_toBottomOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
