--- a/app/src/main/res/layout/listview_show.xml
+++ b/app/src/main/res/layout/listview_show.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imageView"
@@ -35,21 +35,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_area"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="8dp"
-        android:text="(지역)"
-        android:backgroundTint="@color/blue"
-        android:fontFamily="@font/cafe24oneprettynight"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_place"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title" />
-
-<!--    <Button-->
+    <!--    <Button-->
 <!--        android:id="@+id/btn_bookmark"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
