--- a/app/src/main/res/layout/activity_date_reservation.xml
+++ b/app/src/main/res/layout/activity_date_reservation.xml
@@ -209,6 +209,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:text="예약"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="120dp"
+        android:id="@+id/btn_book"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+         />
 
 
 </LinearLayout>
