최종본 커밋

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
     <LinearLayout
+
     android:background="@color/blue2"
     android:orientation="vertical"
     android:layout_height="match_parent"
@@ -9,6 +10,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
+        android:layout_marginTop="10dp"
         android:textStyle="bold"
         android:id="@+id/myPage"
         android:layout_width="match_parent"
@@ -22,11 +24,14 @@
 
 
     <LinearLayout
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:background="@color/blue"
         android:orientation="vertical"
         android:layout_height="200dp"
         android:layout_width="match_parent"
-        android:layout_margin="10dp">
+        >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -118,6 +123,7 @@
 
 
     <LinearLayout
+        android:layout_marginTop="15dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal">
