--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,7 +21,7 @@
             android:fontFamily="@font/cafe24oneprettynight"
             android:gravity="center_horizontal"
             android:padding="15dp"
-            android:text="예매 상황판"
+            android:text="공연 목록"
             android:textColor="#D6A760"
             android:textSize="40sp"
             />
